
syntax = "proto3";
option go_package = "gitbub.com/edwang09/jr-dev-test/literature";
package literature;

service Literature {
  rpc TestgRPC(Text) returns (Text) {}

  rpc GetAllAuthors(Empty) returns (AuthorList) {}
  rpc GetAuthorById(AuthorId) returns (Author) {}
  rpc SearchAuthorByName(AuthorName) returns (AuthorList) {}
  rpc AddAuthor(AuthorName) returns (Author) {}
  rpc EditAuthor(Author) returns (Author) {}
  rpc DeleteAuthor(AuthorId) returns (Empty) {}

  rpc GetAllBooks(Empty) returns (BookList) {}
  rpc GetBookById(BookId) returns (Book) {}
  rpc SearchBookByName(BookName) returns (BookList) {}
  rpc AddBook(BookName) returns (Book) {}
  rpc EditBook(Book) returns (Book) {}
  rpc DeleteBook(BookId) returns (Empty) {}
  
  rpc GetAllAwards(Empty) returns (AwardList) {}
  rpc GetAwardById(AwardId) returns (Award) {}
  rpc SearchAwardByName(AwardName) returns (AwardList) {}
  rpc AddAward(AwardName) returns (Award) {}
  rpc EditAward(Award) returns (Award) {}
  rpc DeleteAward(AwardId) returns (Empty) {}

  rpc GetAllBookAuthors(Empty) returns (BookAuthorList) {}
  rpc GetBookAuthor(BookAuthorId) returns (BookAuthorDetail) {}
  rpc AddBookAuthor(NewBookAuthor) returns (BookAuthor) {}
  rpc EditBookAuthor(BookAuthor) returns (BookAuthor) {}
  rpc DeleteBookAuthor(BookAuthorId) returns (Empty) {}

  rpc GetAllAuthorGrants(Empty) returns (AuthorGrantList) {}
  rpc GetAuthorGrant(AuthorGrantId) returns (AuthorGrantDetail) {}
  rpc AddAuthorGrant(NewAuthorGrant) returns (AuthorGrant) {}
  rpc EditAuthorGrant(AuthorGrant) returns (AuthorGrant) {}
  rpc DeleteAuthorGrant(AuthorGrantId) returns (Empty) {}

  rpc GetAllBookGrants(Empty) returns (BookGrantList) {}
  rpc GetBookGrant(BookGrantId) returns (BookGrantDetail) {}
  rpc AddBookGrant(NewBookGrant) returns (BookGrant) {}
  rpc EditBookGrant(BookGrant) returns (BookGrant) {}
  rpc DeleteBookGrant(BookGrantId) returns (Empty) {}

  rpc MostAwardedAuthor(Empty) returns (MostAwardedAuthors) {}
  rpc MostAwardedBook(Pagination) returns (MostAwardedBooks) {}
  rpc MostGrantedAward(Empty) returns (MostGrantedAwards) {}

}
message Text {
    string body = 1;
}
message Empty {
}
message AuthorId {
    int32 author_id = 1;
}
message Author {
  int32 author_id = 1;
  string author_name = 2;
}
message AuthorName {
  string author_name = 1;
}
message AuthorList {
  repeated Author authors = 1;
}


message BookId {
  int32 book_id = 1;
}
message Book {
  int32 book_id = 1;
  string book_name = 2;
  string format = 3;
  string isbn = 4;
  int32 page = 5;
}
message BookName {
  string book_name = 1;
  string format = 2;
  string isbn = 3;
  int32 page = 4;
}
message BookList {
  repeated Book books = 1;
}


message AwardId {
  int32 award_id = 1;
}
message Award {
  int32 award_id = 1;
  string award_name = 2;
}
message AwardName {
  string award_name = 1;
}
message AwardList {
  repeated Award awards = 1;
}


message BookAuthorId {
  int32 book_author_id = 1;
}
message BookAuthor {
  int32 book_author_id = 1;
  int32 book_id = 2;
  int32 author_id = 3;
}
message BookAuthorDetail {
  int32 book_author_id = 1;
  int32 book_id = 2;
  string book_name = 3;
  int32 author_id = 4;
  string author_name = 5;
}
message NewBookAuthor {
  int32 book_id = 1;
  int32 author_id = 2;
}
message BookAuthorList {
  repeated BookAuthorDetail book_authors = 1;
}

message AuthorGrantId {
  int32 author_grant_id = 1;
}
message AuthorGrant {
  int32 author_grant_id = 1;
  int32 award_id = 2;
  int32 author_id = 3;
}
message AuthorGrantDetail {
  int32 author_grant_id = 1;
  int32 award_id = 2;
  string award_name = 3;
  int32 author_id = 4;
  string author_name = 5;
}
message NewAuthorGrant {
  int32 award_id = 1;
  int32 author_id = 2;
}
message AuthorGrantList {
  repeated AuthorGrantDetail author_grants = 1;
}

message BookGrantId {
  int32 book_grant_id = 1;
}
message BookGrant {
  int32 book_grant_id = 1;
  int32 award_id = 2;
  int32 book_id = 3;
}
message BookGrantDetail {
  int32 book_grant_id = 1;
  int32 award_id = 2;
  string award_name = 3;
  int32 book_id = 4;
  string book_name = 5;
}
message NewBookGrant {
  int32 award_id = 1;
  int32 book_id = 2;
}
message BookGrantList {
  repeated BookGrantDetail book_grants = 1;
}



message MostAwardedAuthor {
  int32 author_id = 1;
  string author_name = 2;
  int32 awarded_time = 3;
}
message MostAwardedBook {
  int32 book_id = 1;
  string book_name = 2;
  string format = 3;
  string isbn = 4;
  int32 page = 5;
  int32 awarded_time = 6;
}
message MostGrantedAward {
  int32 award_id = 1;
  string award_name = 2;
  int32 awarded_time = 3;
}
message MostAwardedAuthors {
  repeated MostAwardedAuthor authors = 1;
}
message MostAwardedBooks {
  repeated MostAwardedBook books = 1;
}
message MostGrantedAwards {
  repeated MostGrantedAward awards = 1;
}
message Pagination{
  int32 page = 1;
}
